# rwc

./: .bandit  .git-aliases  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  FINAL-IMPROVEMENTS-REPORT.md  GIT-ALIASES.md  IMPROVEMENTS-COMPLETE.md  IMPROVEMENTS-SUMMARY.md  PHASE2-IMPLEMENTATION-COMPLETE.md  QWEN.md  READINESS-REPORT.md  README.md  REAL-TIME-RVC-RESEARCH.md  RVC-IMPLEMENTATION-COMPLETE.md  RVC_DEPLOYMENT_GUIDE.md  SECURITY.md  STREAMING-IMPLEMENTATION.md  convert_to_homer.sh  download_additional_models.sh  download_models.sh  pyproject.toml  realtime-convert.sh  requirements.txt  run_api_production.sh  run_rwc_tui.sh  start_enhanced.sh  start_rwc.sh
.github/workflows/: ci.yml
docs/archive/: CODE-QUALITY-IMPROVEMENTS.md  FINAL-IMPROVEMENTS-REPORT.md  HIGH-PRIORITY-TASKS-COMPLETE.md  SECURITY-FIXES-SUMMARY.md
rwc/: __init__.py  config.ini  tui.py  tui_enhanced.py  tui_wth.css  tui_wth.py  webui.py
rwc/api/: __init__.py
rwc/cli/: __init__.py
rwc/core/: __init__.py
rwc/streaming/: __init__.py  backends.py  batch_backend.py  buffer.py  pipeline.py  streaming_backend.py
rwc/utils/: __init__.py  audio_devices.py  constants.py  logging_config.py  validation.py
scripts/: rwc-all-in-one.sh
tests/: __init__.py  conftest.py  test_bug.py  test_cli.py  test_converter.py  test_logging.py  test_security.py  test_streaming.py  test_tui_wth.py  test_validation.py
