[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rwc"
description = "Real-time Voice Conversion system"
version = "0.1.0"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "librosa>=0.10.0",
    "soundfile>=0.10.0",
    "gradio>=3.42.0",
    "pip>=22.2.2",
    "huggingface_hub>=0.18.0",
    "protobuf>=3.20.0",
    "chardet>=4.0.0",
    "flask>=2.0.0",
    "click>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
rwc = "rwc.cli:cli"